src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0012.cd
package de.cd4analysis.cocos;

classdiagram CD4AC0012 {
  class C1 {
    String Attr;
  }  
}